--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -9,14 +9,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Mirror + trigger CI
-      uses: SvanBoxel/gitlab-mirror-and-ci-action@master
-      with:
-        args: "https://gitlab.polytech.umontpellier.fr/yann.pomie/dosm"
-      env:
-        GITLAB_HOSTNAME: "https://gitlab.polytech.umontpellier.fr"
-        GITLAB_USERNAME: ${{ secrets.GITLAB_USERNAME }}
-        GITLAB_PASSWORD: ${{ secrets.GITLAB_PASSWORD }}
-        GITLAB_PROJECT_ID: 1730
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: pixta-dev/repository-mirroring-action@v1
+        with:
+          target_repo_url: "git@gitlab.com:yann.pomie/dosm.git"
+          ssh_username: ${{ secrets.GITLAB_USERNAME }}
+          ssh_private_key: ${{ secrets.GITLAB_SSH_PRIVATE_KEY }}
