--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -14,6 +14,5 @@ jobs:
           fetch-depth: 0
       - uses: pixta-dev/repository-mirroring-action@v1
         with:
-          target_repo_url: "git@gitlab.com:yann.pomie/dosm.git"
-          ssh_username: ${{ secrets.GITLAB_USERNAME }}
+          target_repo_url: "git@gitlab.polytech.umontpellier.fr:yann.pomie/dosm.git"
           ssh_private_key: ${{ secrets.GITLAB_SSH_PRIVATE_KEY }}
